made changes in all files

--- a/index.html
+++ b/index.html
@@ -1,47 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
 
+  <!-- Site Title -->
+  <title>Best Retreat</title>
+
+  <!-- CSS Stylesheet Links -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/navigation.css">
+  <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/b86f006213.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
   <!-- Primary Navigation -->
-  <nav>
-    <nav class="nav">
-      <label for="menu">Menu</label>
-      <input type="checkbox" id="menu">
+    <nav class="container">
       <ul>
-        <li><a href="#">n/a</a></li>
-        <li><a href="#">n/a</a></li>
-        <li><a href="#">n/a</a></li>
-        <li><a href="#">n/a</a></li>
+        <li><a href="#stay">Stay</a></li>
+        <li><a href="#wellness">Wellness</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
+       <!-- Moving Logo -->
+      <div class="newtons-cradle">
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+        <div class="newtons-cradle__dot"></div>
+      </div>
     </nav>
-  </nav>
 
   <!-- Site Banner -->
   <header>
-    <img src="" alt="">
+
+    <h1 class="header-title">Serene Oasis Escape</h1>
+
+    <article>
+
+      <h2 class="phrase" >Embrace Serenity: Dive into the Tranquil Oasis of Our Retreat</h2>
+      <a class="cta" href="https://knordicspa.com/?gclid=EAIaIQobChMIvJjKwerVgQMVdhqtBh0mQQYPEAAYASAAEgLqsPD_BwE">Book Now</a>
+
+    </article>
+
   </header>
 
   <!-- Page Content -->
   <main>
-  <h1></h1>
-  <p></p>
-  </main>
 
-  <!-- Copyright Information -->
+    <h1 class="main-title">Treatments</h1>
+
+    <h2>Hot Spring</h2>
+    <p>A <em>hot spring</em>, hydrothermal spring, or geothermal spring is a spring produced by the emergence of geothermally heated groundwater onto the surface of the Earth. The groundwater is heated either by shallow bodies of magma (molten rock) or by circulation through faults to hot rock deep in the Earth's crust. In either case, the ultimate source of the heat is the radioactive decay of naturally occurring radioactive elements in the Earth's mantle, the layer beneath the crust.</p>
+
+    <h2>Mud Bath</h2>
+    <p>A <em>mud bath</em> is a therapeutic spa treatment that involves soaking in a bath of warm mud, often in a natural hot spring or geothermal pool. Mud baths have been used for centuries as a way to promote health and relaxation, and are still popular today in many parts of the world.</p>
+
+    <h2> Steam Bath</h2>
+    <p>A <em>steam bath</em> is a steam-filled room for the purpose of relaxation and cleansing. It has a long history, going back to Greek and Roman times.</p>
+
+  </main>
+  
   <footer>
-    <p>&copy; 2023 Jessica Nelson</p>
+
+   <!-- Map -->
+   <p class="map"> <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10061.26528501939!2d-115.1462971!3d50.9178653!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5370e8e3fb400001%3A0x332a0fea4a0ebddc!2sKananaskis%20Nordic%20Spa!5e0!3m2!1sen!2sca!4v1696274229933!5m2!1sen!2sca" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+
+    <p class="social-media">
+    <!-- Instagram Logo-->
+    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+    <!-- Twitter Logo -->
+    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+    <!-- Facebook Logo -->
+    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+    </p>
+
+    <!-- Copyright Information -->
+    <p class="copyright">&copy;2023 Jessica Nelson</p>
+
   </footer>
 
 </body>
+
 </html>
